# ckanext-karudata

./: MANIFEST.in  README.md  setup.cfg  test.ini
ckanext/karudata/: cli.py  helpers.py  plugin.py  views.py
ckanext/karudata/assets/: script.js  webassets.yml
ckanext/karudata/assets/css/: karudata_theme.css
ckanext/karudata/logic/: action.py  auth.py  schema.py  validators.py
ckanext/karudata/templates/: base.html  footer.html  header.html  page.html
ckanext/karudata/templates/home/: index.html
ckanext/karudata/templates/home/snippets/: search.html
ckanext/karudata/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/karudata/tests/logic/: test_action.py  test_auth.py  test_validators.py
